# dqplus-hackathon-2026

./: .env.example  .gitignore  CLAUDE.md  README.md  VietNexus Onboarding.html  docker-compose.yml  skills-lock.json  start.sh
.claude/: settings.json
agents/: specs.yaml
ai-data-platform/: docker-compose.yml  pyproject.toml
ai-data-platform/api/: app.py
ai-data-platform/apps/matchmaker/: store.py
ai-data-platform/apps/matchmaker/matcher/: __init__.py  llm_judge.py
ai-data-platform/docs/: AGENT_FLOWS.md  ROADMAP.md  skill-verification-report.md
ai-data-platform/docs/superpowers/specs/: 2026-07-18-agent-data-platform-generalization-design.md
ai-data-platform/migrations/: 002_orchestration.sql
ai-data-platform/schemas/: draft.json  extract.json  verify.json
ai-data-platform/scripts/: bootstrap.py
ai-data-platform/seed/: customers.json  investors.json  mentors.json  partners.json  talents.json  universities.json
ai-data-platform/spine/: config.py  ids.py  transport.py
ai-data-platform/spine/matcher/: embedding_matcher.py
ai-data-platform/tests/: conftest.py  test_crash_recovery.py  test_idempotency.py  test_outreach_store.py
api/: Dockerfile  app.py
backendv2/: .env.example  Dockerfile  package-lock.json  package.json
dashboard/: index.html
docs/: 135-deal-flow-matchmaker.md  ARCHITECTURE.md  DESIGN-SYSTEM.md  DESIGN_SYSTEM.md  OVERVIEW.md  ROADMAP.md  dealflow_matchmaker_research.md
enrichments/: endeavor-vietnam.json
fev2/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/: .env.production  README.md  (+5 more)
(+278 files in other folders)
